testdata/baselines/reference/submodule/compiler/jsdocAccessEnumType.errors.txt
/b.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.ts (0 errors) ====
    export enum E { A }
    
==== /b.js (1 errors) ====
    import { E } from "./a";
    /** @type {E} */
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const e = E.A;
    